crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__builtin_pair_nested_patterns.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 677
description: "module Main exposing (..)\nimport Primitive exposing (..)\ninspect value =\n    case value of\n        pair(I a, B bytes) -> Builtin.addInteger a (Builtin.lengthOfByteString bytes)\n        _ -> 0\nmain : int\nmain = Builtin.addInteger (inspect (Builtin.mkPairData (I 40) (B #\"aabb\"))) (inspect (Builtin.mkPairData (B #\"\") (I 2)))\n"
---
--- core
let fromInt#4 : int -> int = \value#38 : int -> value#38 in
let inspect#2 : pair Data Data -> int = \value#9 : pair Data Data -> let match#12 : pair Data Data = value#9 in
let leaf#25 : @delay int = delay (fromInt#4 0) in
case@Pair match#12 of
  Pair field#26 field#27 -> case@Data field#26 of
    DataConstr field#28 -> force leaf#25
    DataMap field#29 -> force leaf#25
    DataList field#30 -> force leaf#25
    DataI field#31 -> case@Data field#27 of
      DataConstr field#32 -> force leaf#25
      DataMap field#33 -> force leaf#25
      DataList field#34 -> force leaf#25
      DataI field#35 -> force leaf#25
      DataB field#36 -> let a#10 : int = field#31 in
      let bytes#11 : bytes = field#36 in
      addInteger a#10 (lengthOfByteString bytes#11)
    DataB field#37 -> force leaf#25 in
let fromBytes#6 : bytes -> bytes = \value#39 : bytes -> value#39 in
let main#1 : int = addInteger (inspect#2 (mkPairData ((\field#3 : int -> iData field#3) (fromInt#4 40)) ((\field#5 : bytes -> bData field#5) (fromBytes#6 (con bytestring #aabb))))) (inspect#2 (mkPairData ((\field#7 : bytes -> bData field#7) (fromBytes#6 (con bytestring #))) ((\field#8 : int -> iData field#8) (fromInt#4 2)))) in
main#1
--- uplc
(program 1.1.0
  [(lam fromInt_4
    [(lam inspect_2
      [(lam fromBytes_6
        [(lam main_1 main_1)
          [[(builtin addInteger)
            [inspect_2
              [[(builtin mkPairData)
                [(lam field_3 [(builtin iData) field_3]) [fromInt_4 (con integer 40)]]]
                [(lam field_5 [(builtin bData) field_5]) [fromBytes_6 (con bytestring #aabb)]]]]]
            [inspect_2
              [[(builtin mkPairData)
                [(lam field_7 [(builtin bData) field_7]) [fromBytes_6 (con bytestring #)]]]
                [(lam field_8 [(builtin iData) field_8]) [fromInt_4 (con integer 2)]]]]]])
        (lam value_39 value_39)])
      (lam value_9
        [(lam match_12
          [(lam leaf_25
            (case
              match_12
              (lam field_26
                (lam field_27
                  [(lam generated_40
                    (force
                      [[[[[[(force (builtin chooseData)) generated_40] (delay (force leaf_25))]
                        (delay (force leaf_25))]
                        (delay (force leaf_25))]
                        (delay
                          [(lam field_31
                            [(lam generated_41
                              (force
                                [[[[[[(force (builtin chooseData)) generated_41] (delay (force leaf_25))]
                                  (delay (force leaf_25))]
                                  (delay (force leaf_25))]
                                  (delay (force leaf_25))]
                                  (delay
                                    [(lam field_36
                                      [(lam a_10
                                        [(lam bytes_11
                                          [[(builtin addInteger) a_10] [(builtin lengthOfByteString) bytes_11]])
                                          field_36])
                                        field_31])
                                      [(builtin unBData) generated_41]])]))
                              field_27])
                            [(builtin unIData) generated_40]])]
                        (delay (force leaf_25))]))
                    field_26]))))
            (delay [fromInt_4 (con integer 0)])])
          value_9])])
    (lam value_38 value_38)])
--- result
(con integer 42)
--- logs
[]
--- budget
cpu: 3248683, memory: 16866
