crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__data_constr_pair_base_helpers.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 730
description: "module Main exposing (..)\nimport Data\nimport Primitive exposing (..)\nimport Option exposing (type option(..))\nmain : int\nmain =\n    let index = Data.tag (Builtin.constrData 7 [I 42]) in\n    case Data.fields (Builtin.constrData 7 [I 42]) of\n        [I number] -> Builtin.addInteger index number\n        _ -> fail\n"
---
--- core
let fields#3 : Data -> list Data = \value#29 : Data -> let projection#42 : pair int (list Data) = unConstrData value#29 in
let destruct#30 : pair int (list Data) = projection#42 in
let match#32 : pair int (list Data) = destruct#30 in
case@Pair match#32 of
  Pair field#33 field#34 -> let items#31 : list Data = field#34 in
  items#31 in
let fromInt#4 : int -> int = \value#35 : int -> value#35 in
let tag#27 : Data -> int = \value#36 : Data -> let projection#43 : pair int (list Data) = unConstrData value#36 in
let destruct#37 : pair int (list Data) = projection#43 in
let match#39 : pair int (list Data) = destruct#37 in
case@Pair match#39 of
  Pair field#40 field#41 -> let index#38 : int = field#40 in
  index#38 in
let index#2 : int = tag#27 (constrData (fromInt#4 7) (mkCons ((\field#28 : int -> iData field#28) (fromInt#4 42)) (con (list data) []))) in
let match#7 : list Data = fields#3 (constrData (fromInt#4 7) (mkCons ((\field#5 : int -> iData field#5) (fromInt#4 42)) (con (list data) []))) in
let leaf#17 : @delay int = delay error in
let main#1 : int = case@List match#7 of
  Nil -> force leaf#17
  Cons field#18 field#19 -> case@Data field#18 of
    DataConstr field#20 -> force leaf#17
    DataMap field#21 -> force leaf#17
    DataList field#22 -> force leaf#17
    DataI field#23 -> case@List field#19 of
      Nil -> let number#6 : int = field#23 in
      addInteger index#2 number#6
      Cons field#24 field#25 -> force leaf#17
    DataB field#26 -> force leaf#17 in
main#1
--- uplc
(program 1.1.0
  [(lam fields_3
    [(lam fromInt_4
      [(lam tag_27
        [(lam index_2
          [(lam match_7
            [(lam leaf_17
              [(lam main_1 main_1)
                (case
                  match_7
                  (lam field_18
                    (lam field_19
                      [(lam generated_44
                        (force
                          [[[[[[(force (builtin chooseData)) generated_44] (delay (force leaf_17))]
                            (delay (force leaf_17))]
                            (delay (force leaf_17))]
                            (delay
                              [(lam field_23
                                (case
                                  field_19
                                  (lam field_24 (lam field_25 (force leaf_17)))
                                  [(lam number_6 [[(builtin addInteger) index_2] number_6]) field_23]))
                                [(builtin unIData) generated_44]])]
                            (delay (force leaf_17))]))
                        field_18]))
                  (force leaf_17))])
              (delay (error))])
            [fields_3
              [[(builtin constrData) [fromInt_4 (con integer 7)]]
                [[(force (builtin mkCons))
                  [(lam field_5 [(builtin iData) field_5]) [fromInt_4 (con integer 42)]]]
                  (con (list data) [])]]]])
          [tag_27
            [[(builtin constrData) [fromInt_4 (con integer 7)]]
              [[(force (builtin mkCons))
                [(lam field_28 [(builtin iData) field_28]) [fromInt_4 (con integer 42)]]]
                (con (list data) [])]]]])
        (lam value_36
          [(lam projection_43
            [(lam destruct_37
              [(lam match_39
                (case match_39 (lam field_40 (lam field_41 [(lam index_38 index_38) field_40]))))
                destruct_37])
              projection_43])
            [(builtin unConstrData) value_36]])])
      (lam value_35 value_35)])
    (lam value_29
      [(lam projection_42
        [(lam destruct_30
          [(lam match_32
            (case match_32 (lam field_33 (lam field_34 [(lam items_31 items_31) field_34]))))
            destruct_30])
          projection_42])
        [(builtin unConstrData) value_29]])])
--- result
(con integer 49)
--- logs
[]
--- budget
cpu: 2725227, memory: 14422
