crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__data_ignored_payload_keeps_scrutinee_effects.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 1031
description: "module Main exposing (..)\nimport Data exposing (ToData)\nimport Primitive exposing (Data(..))\nmain : int\nmain = case trace \"data input\" (toData (Builtin.iData 42)) of\n    I _ -> 7\n    _ -> fail\n"
---
--- unoptimized Core
let message#20 : string = "data input" in
let toData#2 : 'erased -> Data = \coerce#17 : 'erased -> coerce#17 in
let fromInt#3 : int -> int = \value#18 : int -> value#18 in
let fromString#4 : string -> string = \value#19 : string -> value#19 in
let match#5 : Data = trace (fromString#4 message#20) in toData#2 (iData (fromInt#3 42)) in
let leaf#11 : @delay int = delay error in
let main#1 : int = case@Data match#5 of
  DataConstr field#12 -> force leaf#11
  DataMap field#13 -> force leaf#11
  DataList field#14 -> force leaf#11
  DataI field#15 -> fromInt#3 7
  DataB field#16 -> force leaf#11 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_20
    [(lam toData_2
      [(lam fromInt_3
        [(lam fromString_4
          [(lam match_5
            [(lam leaf_11
              [(lam main_1 main_1)
                [(lam generated_21
                  (force
                    [[[[[[(force (builtin chooseData)) generated_21] (delay (force leaf_11))]
                      (delay (force leaf_11))]
                      (delay (force leaf_11))]
                      (delay [fromInt_3 (con integer 7)])]
                      (delay (force leaf_11))]))
                  match_5]])
              (delay (error))])
            (force
              [[(force (builtin trace)) [fromString_4 message_20]]
                (delay [toData_2 [(builtin iData) [fromInt_3 (con integer 42)]]])])])
          (lam value_19 value_19)])
        (lam value_18 value_18)])
      (lam coerce_17 coerce_17)])
    (con string "data input")])
--- optimized Core
let match#23 : Data = trace "data input" in iData 42 in
let leaf#24 : @delay int = delay error in
case@Data match#23 of
  DataConstr field#25 -> force leaf#24
  DataMap field#26 -> force leaf#24
  DataList field#27 -> force leaf#24
  DataI field#28 -> 7
  DataB field#29 -> force leaf#24
--- optimized UPLC
(program 1.1.0
  [(lam builtin_9
    [(lam builtin_10
      [(lam match_1
        [(lam leaf_2
          [(lam generated_8
            (force
              [[[[[[builtin_9 generated_8] (delay (force leaf_2))] (delay (force leaf_2))]
                (delay (force leaf_2))]
                (delay (con integer 7))]
                (delay (force leaf_2))]))
            match_1])
          (delay (error))])
        (force
          [[builtin_10 (con string "data input")]
            (delay [(builtin iData) (con integer 42)])])])
      (force (builtin trace))])
    (force (builtin chooseData))])
--- result
(con integer 7)
--- logs
["data input"]
--- budget
cpu: 1145272, memory: 6296
