crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__expect_empty_list_on_filled_list.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 13
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain : bool\nmain =\n    let\n        x : list int\n        x = [1, 2]\n    in\n    case x of\n        [] -> True\n        _ -> fail\n"
---
--- unoptimized Core
let fromBool#3 : bool -> bool = \value#8 : bool -> value#8 in
let fromInt#7 : int -> int = \value#9 : int -> value#9 in
let x#2 : list int = mkCons (fromInt#7 1) (mkCons (fromInt#7 2) (con (list integer) [])) in
let match#4 : list int = x#2 in
let main#1 : bool = case@List match#4 of
  Nil -> fromBool#3 true
  Cons field#5 field#6 -> error in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_3
    [(lam fromInt_7
      [(lam x_2
        [(lam match_4
          [(lam main_1 main_1)
            (case match_4 (lam field_5 (lam field_6 (error))) [fromBool_3 (con bool True)])])
          x_2])
        [[(force (builtin mkCons)) [fromInt_7 (con integer 1)]]
          [[(force (builtin mkCons)) [fromInt_7 (con integer 2)]] (con (list integer) [])]]])
      (lam value_9 value_9)])
    (lam value_8 value_8)])
--- optimized Core
let anf#21 : list int = mkCons 2 (con (list integer) []) in
let x#14 : list int = mkCons 1 anf#21 in
case@List x#14 of
  Nil -> true
  Cons field#16 field#17 -> error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_1
      [(lam x_2 (case x_2 (lam field_3 (lam field_4 (error))) (con bool True)))
        [[builtin_5 (con integer 1)] anf_1]])
      [[builtin_5 (con integer 2)] (con (list integer) [])]])
    (force (builtin mkCons))])
--- result
error: ExplicitErrorTerm
--- logs
[]
--- budget
cpu: 144824, memory: 164
