crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__expect_empty_list_on_new_list.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 31
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain : bool\nmain =\n    let\n        x : list int\n        x = []\n    in\n    case x of\n        [] -> True\n        _ -> fail\n"
---
--- unoptimized Core
let fromBool#3 : bool -> bool = \value#7 : bool -> value#7 in
let x#2 : list int = (con (list integer) []) in
let match#4 : list int = x#2 in
let main#1 : bool = case@List match#4 of
  Nil -> fromBool#3 true
  Cons field#5 field#6 -> error in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_3
    [(lam x_2
      [(lam match_4
        [(lam main_1 main_1)
          (case match_4 (lam field_5 (lam field_6 (error))) [fromBool_3 (con bool True)])])
        x_2])
      (con (list integer) [])])
    (lam value_7 value_7)])
--- optimized Core
case@List (con (list integer) []) of
  Nil -> true
  Cons field#12 field#13 -> error
--- optimized UPLC
(program 1.1.0
  (case
    (con (list integer) [])
    (lam field_1 (lam field_2 (error)))
    (con bool True)))
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 288100, memory: 1900
